--- a/Lab_Login/app/src/main/res/values/strings.xml
+++ b/Lab_Login/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="log">Login</string>
     <string name="registro">Registro</string>
     <string name="User">Usuario</string>
+    <string name="verda">View Data</string>
 
 </resources>
